// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Vegan Gelato Engine — real Mapper formulation matrix > almond routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 5.52,
    "fiber": 0.244,
    "ice": 45.632,
    "ingredients": [
      {
        "grams": 480,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 236,
        "id": "PI-ING-001587",
        "main": false,
        "name": "ALMOND DRINK · Beverage · Chilled",
      },
      {
        "grams": 50,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 175,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 57,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE MONOHYDRATE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 41.401,
    "pac": 28.957,
    "pod": 22.845,
    "protein": 0.169,
    "score": 10,
    "solids": 30.057,
    "sugars": 23.439,
    "temperature": -11,
    "violations": [],
    "water": 69.943,
  },
  {
    "batch": 1000,
    "fat": 6.082,
    "fiber": 0.252,
    "ice": 50.284,
    "ingredients": [
      {
        "grams": 420,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 264,
        "id": "PI-ING-001587",
        "main": false,
        "name": "ALMOND DRINK · Beverage · Chilled",
      },
      {
        "grams": 55,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 153,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 106,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE MONOHYDRATE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 52.908,
    "pac": 35.411,
    "pod": 24.35,
    "protein": 0.189,
    "score": 10,
    "solids": 33.072,
    "sugars": 25.783,
    "temperature": -12,
    "violations": [],
    "water": 66.928,
  },
  {
    "batch": 1000,
    "fat": 6.413,
    "fiber": 0.256,
    "ice": 49.405,
    "ingredients": [
      {
        "grams": 389,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 278,
        "id": "PI-ING-001587",
        "main": false,
        "name": "ALMOND DRINK · Beverage · Chilled",
      },
      {
        "grams": 58,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 106,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 167,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE MONOHYDRATE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 62.969,
    "pac": 41.341,
    "pod": 24.156,
    "protein": 0.199,
    "score": 10,
    "solids": 34.347,
    "sugars": 26.673,
    "temperature": -13,
    "violations": [],
    "water": 65.653,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > banana routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 7.801,
    "fiber": 0.173,
    "ice": 49.197,
    "ingredients": [
      {
        "grams": 914,
        "id": "PI-ING-001589",
        "main": true,
        "name": "BANANA · Puree",
      },
      {
        "grams": 78,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 6,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE MONOHYDRATE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 38.024,
    "pac": 26.614,
    "pod": 18.588,
    "protein": 0.918,
    "score": 10,
    "solids": 30.005,
    "sugars": 17.363,
    "temperature": -11,
    "violations": [],
    "water": 69.995,
  },
  {
    "batch": 1000,
    "fat": 3.601,
    "fiber": 0.173,
    "ice": 50.358,
    "ingredients": [
      {
        "grams": 914,
        "id": "PI-ING-001589",
        "main": true,
        "name": "BANANA · Puree",
      },
      {
        "grams": 36,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 42,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 6,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE MONOHYDRATE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 44.024,
    "pac": 30.814,
    "pod": 22.788,
    "protein": 0.918,
    "score": 10,
    "solids": 30.005,
    "sugars": 21.563,
    "temperature": -12,
    "violations": [],
    "water": 69.995,
  },
  {
    "batch": 1000,
    "fat": 4.901,
    "fiber": 0.173,
    "ice": 49.779,
    "ingredients": [
      {
        "grams": 873,
        "id": "PI-ING-001589",
        "main": true,
        "name": "BANANA · Puree",
      },
      {
        "grams": 49,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 55,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 21,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE MONOHYDRATE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 50.09,
    "pac": 33.558,
    "pod": 24.364,
    "protein": 0.877,
    "score": 10,
    "solids": 33.005,
    "sugars": 23.472,
    "temperature": -13,
    "violations": [],
    "water": 66.995,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > calculates verified pea/rice proteins without any dairy gate 1`] = `
{
  "batch": 1000,
  "fat": 5.77,
  "fiber": 3.927,
  "ice": 49.519,
  "ingredients": [
    {
      "grams": 383,
      "id": "PI-ING-001409",
      "main": false,
      "name": "WATER · Liquid",
    },
    {
      "grams": 253,
      "id": "PI-ING-001565",
      "main": false,
      "name": "OAT DRINK · Beverage · Chilled · BIO",
    },
    {
      "grams": 53,
      "id": "PI-ING-000163",
      "main": false,
      "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
    },
    {
      "grams": 96,
      "id": "PI-ING-000514",
      "main": false,
      "name": "SUCROSE SUGAR · Sweetener · Dry",
    },
    {
      "grams": 152,
      "id": "PI-ING-000494",
      "main": false,
      "name": "DEXTROSE MONOHYDRATE · Sweetener · Dry",
    },
    {
      "grams": 41,
      "id": "PI-ING-000456",
      "main": false,
      "name": "Inulin",
    },
    {
      "grams": 2,
      "id": "PI-ING-000492",
      "main": false,
      "name": "TARA GUM · Stabilizer",
    },
    {
      "grams": 10,
      "id": "PI-ING-000451",
      "main": false,
      "name": "PEA PROTEIN · Protein · Dry",
    },
    {
      "grams": 10,
      "id": "PI-ING-000452",
      "main": false,
      "name": "RICE PROTEIN · Protein · Dry",
    },
  ],
  "npac": 59.054,
  "pac": 37.358,
  "pod": 21.688,
  "protein": 1.762,
  "score": 10,
  "solids": 36.739,
  "sugars": 24.454,
  "violations": [],
  "water": 63.261,
}
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > cocoa routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 6.579,
    "fiber": 8.467,
    "ice": 52.331,
    "ingredients": [
      {
        "grams": 286,
        "id": "PI-ING-001578",
        "main": true,
        "name": "COCOA ALKALIZED 100% · Cacao Barry Cocoa Powder",
      },
      {
        "grams": 564,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 79,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 69,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE MONOHYDRATE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 35.055,
    "pac": 19.998,
    "pod": 13.031,
    "protein": 5.409,
    "score": 10,
    "solids": 42.953,
    "sugars": 14.172,
    "temperature": -11,
    "violations": [],
    "water": 57.047,
  },
  {
    "batch": 1000,
    "fat": 6.372,
    "fiber": 8.206,
    "ice": 50.358,
    "ingredients": [
      {
        "grams": 277,
        "id": "PI-ING-001578",
        "main": true,
        "name": "COCOA ALKALIZED 100% · Cacao Barry Cocoa Powder",
      },
      {
        "grams": 559,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 42,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 120,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE MONOHYDRATE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 44.026,
    "pac": 25.1,
    "pod": 13.035,
    "protein": 5.239,
    "score": 10,
    "solids": 42.989,
    "sugars": 15.108,
    "temperature": -12,
    "violations": [],
    "water": 57.011,
  },
  {
    "batch": 1000,
    "fat": 6.211,
    "fiber": 8.003,
    "ice": 49.775,
    "ingredients": [
      {
        "grams": 270,
        "id": "PI-ING-001578",
        "main": true,
        "name": "COCOA ALKALIZED 100% · Cacao Barry Cocoa Powder",
      },
      {
        "grams": 556,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 17,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 155,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE MONOHYDRATE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 50.219,
    "pac": 28.64,
    "pod": 13.076,
    "protein": 5.107,
    "score": 10,
    "solids": 42.971,
    "sugars": 15.79,
    "temperature": -13,
    "violations": [],
    "water": 57.03,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > neutral routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 5.416,
    "fiber": 0.173,
    "ice": 45.267,
    "ingredients": [
      {
        "grams": 468,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 242,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 51,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 179,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 58,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE MONOHYDRATE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 41.747,
    "pac": 29.079,
    "pod": 23.109,
    "protein": 0.101,
    "score": 10,
    "solids": 30.346,
    "sugars": 24.164,
    "temperature": -11,
    "violations": [],
    "water": 69.654,
  },
  {
    "batch": 1000,
    "fat": 5.844,
    "fiber": 0.173,
    "ice": 50.293,
    "ingredients": [
      {
        "grams": 420,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 264,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 55,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 153,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 106,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE MONOHYDRATE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 51.804,
    "pac": 34.874,
    "pod": 24.089,
    "protein": 0.11,
    "score": 10,
    "solids": 32.681,
    "sugars": 26.018,
    "temperature": -12,
    "violations": [],
    "water": 67.319,
  },
  {
    "batch": 1000,
    "fat": 6.162,
    "fiber": 0.173,
    "ice": 49.442,
    "ingredients": [
      {
        "grams": 389,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 278,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 58,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 106,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 167,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE MONOHYDRATE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 61.721,
    "pac": 40.776,
    "pod": 23.881,
    "protein": 0.115,
    "score": 10,
    "solids": 33.935,
    "sugars": 26.92,
    "temperature": -13,
    "violations": [],
    "water": 66.065,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > pistachio routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 12,
    "fiber": 2.833,
    "ice": 52.246,
    "ingredients": [
      {
        "grams": 266,
        "id": "PI-ING-000614",
        "main": true,
        "name": "PISTACHIO · Aldori Paste · 100% Nut",
      },
      {
        "grams": 549,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 22,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 125,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 36,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE MONOHYDRATE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 35.135,
    "pac": 20.871,
    "pod": 17.256,
    "protein": 5.333,
    "score": 10,
    "solids": 40.597,
    "sugars": 17.911,
    "temperature": -11,
    "violations": [],
    "water": 59.403,
  },
  {
    "batch": 1000,
    "fat": 12,
    "fiber": 2.833,
    "ice": 50.355,
    "ingredients": [
      {
        "grams": 266,
        "id": "PI-ING-000614",
        "main": true,
        "name": "PISTACHIO · Aldori Paste · 100% Nut",
      },
      {
        "grams": 523,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 22,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 126,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 61,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE MONOHYDRATE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 44.342,
    "pac": 25.289,
    "pod": 19.173,
    "protein": 5.333,
    "score": 10,
    "solids": 42.97,
    "sugars": 20.283,
    "temperature": -12,
    "violations": [],
    "water": 57.03,
  },
  {
    "batch": 1000,
    "fat": 12,
    "fiber": 2.833,
    "ice": 49.777,
    "ingredients": [
      {
        "grams": 266,
        "id": "PI-ING-000614",
        "main": true,
        "name": "PISTACHIO · Aldori Paste · 100% Nut",
      },
      {
        "grams": 540,
        "id": "PI-ING-001409",
        "main": false,
        "name": "WATER · Liquid",
      },
      {
        "grams": 22,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 23,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 147,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE MONOHYDRATE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 50.142,
    "pac": 29.841,
    "pod": 15.125,
    "protein": 5.333,
    "score": 10,
    "solids": 40.487,
    "sugars": 17.801,
    "temperature": -13,
    "violations": [],
    "water": 59.513,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > preserves the Strawberry/Banana 1:1 Multi-Main contract 1`] = `
{
  "batch": 1000,
  "fat": 4.222,
  "fiber": 0.977,
  "ice": 49.78,
  "ingredients": [
    {
      "grams": 403,
      "id": "PI-ING-001589",
      "main": true,
      "name": "BANANA · Puree",
    },
    {
      "grams": 402,
      "id": "PI-ING-001553",
      "main": true,
      "name": "STRAWBERRIES · Fresh Fruit",
    },
    {
      "grams": 41,
      "id": "PI-ING-000163",
      "main": false,
      "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
    },
    {
      "grams": 111,
      "id": "PI-ING-000514",
      "main": false,
      "name": "SUCROSE SUGAR · Sweetener · Dry",
    },
    {
      "grams": 41,
      "id": "PI-ING-000494",
      "main": false,
      "name": "DEXTROSE MONOHYDRATE · Sweetener · Dry",
    },
    {
      "grams": 2,
      "id": "PI-ING-000492",
      "main": false,
      "name": "TARA GUM · Stabilizer",
    },
  ],
  "npac": 50.04,
  "pac": 33.527,
  "pod": 24.869,
  "protein": 0.688,
  "score": 10,
  "solids": 33,
  "sugars": 24.574,
  "violations": [],
  "water": 67,
}
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > preserves the Strawberry/Banana 2:1 Multi-Main contract 1`] = `
{
  "batch": 1000,
  "fat": 4.684,
  "fiber": 0.723,
  "ice": 49.781,
  "ingredients": [
    {
      "grams": 551,
      "id": "PI-ING-001589",
      "main": true,
      "name": "BANANA · Puree",
    },
    {
      "grams": 275,
      "id": "PI-ING-001553",
      "main": true,
      "name": "STRAWBERRIES · Fresh Fruit",
    },
    {
      "grams": 46,
      "id": "PI-ING-000163",
      "main": false,
      "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
    },
    {
      "grams": 89,
      "id": "PI-ING-000514",
      "main": false,
      "name": "SUCROSE SUGAR · Sweetener · Dry",
    },
    {
      "grams": 37,
      "id": "PI-ING-000494",
      "main": false,
      "name": "DEXTROSE MONOHYDRATE · Sweetener · Dry",
    },
    {
      "grams": 2,
      "id": "PI-ING-000492",
      "main": false,
      "name": "TARA GUM · Stabilizer",
    },
  ],
  "npac": 50.002,
  "pac": 33.493,
  "pod": 24.438,
  "protein": 0.747,
  "score": 10,
  "solids": 33.018,
  "sugars": 23.997,
  "violations": [],
  "water": 66.982,
}
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > strawberry routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 5.037,
    "fiber": 1.745,
    "ice": 52.385,
    "ingredients": [
      {
        "grams": 786,
        "id": "PI-ING-001553",
        "main": true,
        "name": "STRAWBERRIES · Fresh Fruit",
      },
      {
        "grams": 48,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 162,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE MONOHYDRATE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 35.004,
    "pac": 24.5,
    "pod": 21.791,
    "protein": 0.554,
    "score": 10,
    "solids": 30.009,
    "sugars": 20.941,
    "temperature": -11,
    "violations": [],
    "water": 69.991,
  },
  {
    "batch": 1000,
    "fat": 1.836,
    "fiber": 1.737,
    "ice": 50.356,
    "ingredients": [
      {
        "grams": 782,
        "id": "PI-ING-001553",
        "main": true,
        "name": "STRAWBERRIES · Fresh Fruit",
      },
      {
        "grams": 16,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 158,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 42,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE MONOHYDRATE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 44.239,
    "pac": 30.967,
    "pod": 24.271,
    "protein": 0.551,
    "score": 10,
    "solids": 30.001,
    "sugars": 24.153,
    "temperature": -12,
    "violations": [],
    "water": 69.999,
  },
  {
    "batch": 1000,
    "fat": 3.925,
    "fiber": 1.665,
    "ice": 49.778,
    "ingredients": [
      {
        "grams": 746,
        "id": "PI-ING-001553",
        "main": true,
        "name": "STRAWBERRIES · Fresh Fruit",
      },
      {
        "grams": 37,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 153,
        "id": "PI-ING-000514",
        "main": false,
        "name": "SUCROSE SUGAR · Sweetener · Dry",
      },
      {
        "grams": 62,
        "id": "PI-ING-000494",
        "main": false,
        "name": "DEXTROSE MONOHYDRATE · Sweetener · Dry",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "TARA GUM · Stabilizer",
      },
    ],
    "npac": 50.102,
    "pac": 33.557,
    "pod": 24.976,
    "protein": 0.526,
    "score": 10,
    "solids": 33.023,
    "sugars": 25.263,
    "temperature": -13,
    "violations": [],
    "water": 66.977,
  },
]
`;
